Changelog:

3.20
- TBCPrep now turns off RXP & Questie quest automation 10 seconds after logging in / reloading. Can be disabled in the '/tbcprep' settings tab
- TBCprep now warns if RXP/Questie quest automation is enabled every 10 minutes in chat. Can be disabled in the '/tbcprep' settings tab
- It didn't seem possible to disable LeatrixPlus automation from our addon, as they don't expose their live settings globally. Please turn it off yourself.

3.19 (2026-01-25) 
- Eitrigg's Wisdom (part of Onyxia attunement) should no longer show a warning when picked up.
- "Fel Elemental Rod" for the T0.5 questline is now marked correctly as BoE (Can be mailed and bought on AH).
- Companion: Added 'Collect' button the the 'Bags' steps, so you can quickly loot the items from the bank.
- Companion: T0.5 Class belt & gloves are now set to always be in bags, so players that have equipped them doesn't get griefed on release since they can't mail them.
- Companion: No longer only loots 1 stack after the prepatch.
- Companion: Companion now tries to update the itemlist after collecting, not only after closing the mail/bank. If the mailbox lags it might not work, just close the mail/bank to get a fresh update.
- Added description of a way to use the companion without relying on our mail-loot logic on release. The servers might be lagging and we can't guarantee how well it works.
  > Please go to /tbcprep > Extras > Mailbox and scroll down to the "Simple 'Manual Mail Help' Usage" header. This is how Pawaox will handle mails on release.

3.18 (2026-01-24)
- Added Main Route turnin
- Fixed Coordinates for dungeons with prepatch
- Fixed spelling mistake in the "Item Delete Warning" window
- Fix wrong text in Extras - Mailbox description
- Clarify that the "Completion Warnings" settings is not guaranteed to work in its tooltips
- Added quest comment for Anthion's Strange Request
- Fixed the second "Of Love and Family" having the first "Of Love and Family" as prequest in the strat route.